@@ -8,7 +8,8 @@
 	"cinnamon-version": [
 		"5.4",
 		"5.6",
-		"5.8"
+		"5.8",
+		"6.0"
 	],
 	"max-instances": 1,
 	"url": "https://github.com/TobiZog/cinnamon-dynamic-wallpaper"
