@@ -7,6 +7,7 @@
 - Option to display image on lock screens
 - Bugfixes
 - Remove support for Cinnamon 5.2 and older
+- Apply and OK button to test settings without closing the window
 
 # Version 1.4
 - Log System
